Fix bookmark titles too long (add ellipsis) + fix search on homepage: it now search in every bookmarks

--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -13,6 +13,9 @@
 
   .title{
     font-size: 2rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 
     a, a:visited{
       color: #000;
